Incremented build version and updated CHANGELOG.md

--- a/permission_handler/example/ios/Runner/Info.plist
+++ b/permission_handler/example/ios/Runner/Info.plist
@@ -99,5 +99,9 @@
     <!-- Permission options for the `appTrackingTransparency` -->
     <key>NSUserTrackingUsageDescription</key>
     <string>appTrackingTransparency</string>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 </dict>
 </plist>
